--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -138,7 +138,7 @@ import { allTreatments } from "@/lib/data";
         />
         <div
           id="search-results"
-          class="absolute top-full left-1/2 -translate-x-1/2 md:left-0 w-[120%] md:w-full bg-white rounded-2xl mt-2 shadow-2xl border border-base-light z-50 hidden"
+          class="absolute top-full left-1/2 -translate-x-1/2 md:translate-0 md:left-0 w-[120%] md:w-full bg-white rounded-2xl mt-2 shadow-2xl border border-base-light z-50 hidden"
         >
           <ul class="p-4 space-y-2"></ul>
         </div>
