--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import BaseHead from "@/components/BaseHead.astro";
 import Footer from "@/components/Footer.astro";
 import Navbar from "@/components/Navbar.astro";
+import { ClientRouter } from "astro:transitions";
 import "@/styles/global.css";
 
 interface Props {
@@ -14,6 +15,7 @@ const { title, desc } = Astro.props;
 
 <html lang="es">
   <head>
+    <ClientRouter />
     <BaseHead />
 
     <title>{title}{title && " - "} Clínica Dermatológica Ballesteros</title>
@@ -25,3 +27,19 @@ const { title, desc } = Astro.props;
   <slot />
   <Footer />
 </body>
+
+<style is:global>
+  ::view-transition-old(portada-img),
+  ::view-transition-new(portada-img) {
+    animation-duration: 0.5s;
+    animation-timing-function: ease;
+  }
+
+  ::view-transition-old(portada-img) {
+    opacity: 1;
+  }
+
+  ::view-transition-new(portada-img) {
+    opacity: 1;
+  }
+</style>
