--- a/src/pages/blog/[category]/[slug].astro
+++ b/src/pages/blog/[category]/[slug].astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
 import { blogPosts } from "@/lib/data";
+import { Image } from "astro:assets";
 
 const { category, slug } = Astro.params;
 
@@ -65,9 +66,12 @@ Astro.response.headers.set(
         <div
           class="md:aspect-video md:rounded-4xl overflow-hidden md:shadow-2xl md:border-8 md:border-white bg-surface-200"
         >
-          <img
+          <Image
             src={post.image}
             alt={post.title}
+            width={1600}
+            height={900}
+            loading="eager"
             style={`view-transition-name: image-${post.slug}`}
             class="w-full h-full object-cover"
           />
