--- a/src/components/Mapa.astro
+++ b/src/components/Mapa.astro
@@ -1,8 +1,8 @@
-<section class="relative py-24 bg-white overflow-hidden">
-  <div class="container mx-auto px-6">
+<section class="relative py-24 sm:px-6 bg-white overflow-hidden">
+  <div class="container mx-auto">
     <div class="flex flex-col lg:flex-row gap-12 items-stretch">
       <div
-        class="lg:w-2/3 h-[450px] lg:h-auto min-h-[400px] rounded-3xl overflow-hidden shadow-2xl border-8 border-surface-100"
+        class="lg:w-2/3 h-[450px] lg:h-auto min-h-[400px] sm:rounded-3xl overflow-hidden sm:shadow-2xl sm:border-8 sm:border-surface-100"
       >
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.864705193!2d-77.032164!3d-12.119677!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c819d3e2c6a3%3A0x86863047aa8162b2!2sIderma%20Capilar!5e0!3m2!1ses!2spe!4v1710000000000!5m2!1ses!2spe"
@@ -14,7 +14,7 @@
         </iframe>
       </div>
 
-      <div class="lg:w-1/3 space-y-8 py-4">
+      <div class="lg:w-1/3 space-y-8 py-4 px-6 sm:px-0">
         <div class="space-y-4">
           <h2 class="text-primary font-serif italic text-2xl">
             Ubicación Estratégica
