style: Responsive mision y vision

--- a/src/components/VisionMision.astro
+++ b/src/components/VisionMision.astro
@@ -12,10 +12,10 @@
   >
   </div>
 
-  <div class="container mx-auto px-6 relative z-10">
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-12 lg:gap-20">
+  <div class="container mx-auto md:px-6 relative z-10">
+    <div class="grid grid-cols-1 md:grid-cols-2 md:gap-12 lg:gap-20">
       <div
-        class="group p-10 md:p-16 rounded-[3rem] bg-surface-100 border border-base-light hover:border-primary/20 hover:bg-white hover:shadow-2xl hover:shadow-primary/10 transition-all duration-500 h-fit"
+        class="group p-10 md:p-16 md:rounded-3xl bg-surface-100 border-y md:border border-base-light hover:border-primary/20 hover:bg-white hover:shadow-2xl hover:shadow-primary/10 transition-all duration-500 h-fit"
       >
         <div
           class="mb-8 w-16 h-16 bg-white rounded-2xl flex items-center justify-center shadow-sm text-primary group-hover:bg-primary group-hover:text-white transition-colors duration-500"
@@ -60,7 +60,7 @@
       </div>
 
       <div
-        class="group p-10 md:p-16 rounded-[3rem] bg-ink-base text-white hover:shadow-2xl hover:shadow-primary/20 transition-all duration-500 md:mt-12"
+        class="group p-10 md:p-16 md:rounded-3xl bg-ink-base text-white hover:shadow-2xl hover:shadow-primary/20 transition-all duration-500 md:mt-12"
       >
         <div
           class="mb-8 w-16 h-16 bg-white/10 rounded-2xl flex items-center justify-center text-primary group-hover:bg-primary group-hover:text-white transition-all duration-500"
