--- a/src/components/FormContacto.astro
+++ b/src/components/FormContacto.astro
@@ -73,7 +73,7 @@
         class="w-full lg:w-1/2 animate-in fade-in slide-in-from-right-8 duration-1000 delay-200"
       >
         <div
-          class="bg-white p-8 md:p-12 rounded-[3.5rem] shadow-[0_32px_64px_-16px_rgba(0,0,0,0.1)] border border-base-light relative"
+          class="bg-white p-8 md:p-12 rounded-4xl shadow-[0_32px_64px_-16px_rgba(0,0,0,0.1)] border border-base-light relative"
         >
           <div
             class="absolute -top-6 -right-6 bg-ink-base text-white p-6 rounded-3xl hidden md:block rotate-6"
